.helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realworld
spec:
  selector:
    app: realworld
  ports:
  - name: http
    port: 8000
