.helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realworld
spec:
  ingressClassName: nginx
  rules:
  - host: realworld-127-0-0-1.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: realworld
            port:
              number: 8000
